--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "goit-react-hw-03-phonebook",
+  "name": "goit-react-hw-04-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://buga747.github.io/goit-react-hw-03-phonebook/",
+  "homepage": "https://buga747.github.io/goit-react-hw-04-phonebook/",
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,11 +14,13 @@
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3",
-    "yup": "^1.0.0"
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
